@@ -57,7 +57,7 @@ SN_OBTAIN_INTERVAL = 5
 EXIT_TIMEOUT = 15
 ERROR_REASON_TIMEOUT = 2
 PATH_WAIT_TIMEOUT = 10
-SLEEP_SCREEN_TIMEOUT = 30 * 60
+SLEEP_SCREEN_TIMEOUT = 20
 
 # --- Lcd queue ---
 LCD_QUEUE_SIZE = 30
