@@ -72,6 +72,7 @@
      * Added caching for thumbnail images
      * Send printer info on printer reset / info invalidation event
      * Fixed error handling for PrusaLink Web
+     * Add idle screen and show transfers during print pauses
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
